--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="progressbar"></div>
   <div id="scrollPath"></div>
   <section id="welcome-section">
-    <div class="logo">T Shantu Kumar Reddy</div>
+    <div class="logo">Shantu</div>
     <header>
       <nav id="navbar">
         <div class="hamburger">
@@ -37,8 +37,6 @@
         <div class="letter" data-speed="1">N</div>
         <div class="letter" data-speed="3">T</div>
         <div class="letter" data-speed="2">U</div>
-        <div class="letter" data-speed="1"></div>
-        <div class="letter" data-speed="3">T</div>
       </div>
       <p class="intro">Web Designer, Developer and Programmer</p>
     </div>
